grammar.js
    source_file: ($) =>
      repeat(
        choice(
          seq($._expression, ';'),
          $._statement,
          seq($.quit_statement, ';'),
          $.help_statement,
        ),
      ),

    // Statements
    _block: ($) => repeat1($._statement),

    _statement: ($) =>
      choice(
        seq($._statement_inner, ';'),
        ';', // empty statement
      ),

    quit_statement: (_) => /quit|QUIT/,

    assignment_statement: ($) =>
      seq(field('left', $._expression), ':=', field('right', $._expression)),

    if_statement: ($) =>
      seq(
        'if',
        field('condition', $._expression),
        'then',
        optional(field('body', $._block)),
        repeat($.elif_clause),
        optional($.else_clause),
        'fi',
      ),

    elif_clause: ($) =>
      seq(
        'elif',
        field('condition', $._expression),
        'then',
        optional(field('body', $._block)),
      ),

    else_clause: ($) => seq('else', optional(field('body', $._block))),

    while_statement: ($) =>
      seq(
        'while',
        field('condition', $._expression),
        'do',
        optional(field('body', $._block)),
        'od',
      ),

    repeat_statement: ($) =>
      seq(
        'repeat',
        optional(field('body', $._block)),
        'until',
        field('condition', $._expression),
      ),

    for_statement: ($) =>
      seq(
        'for',
        field('identifier', $.identifier),
        'in',
        field('values', $._expression),
        'do',
        optional(field('body', $._block)),
        'od',
      ),

    // GAP source file location: src/read.c ReadAtomic
    break_statement: (_) => 'break',

    continue_statement: (_) => 'continue',

    return_statement: ($) => seq('return', optional($._expression)),

    // Expressions

    _expression: ($) =>
      choice(
        $._variable,
        $.binary_expression,
        $.unary_expression,

        $.integer,
        $.float,
        $.bool,
        $.tilde,
        $.char,
        $.string,
        $.function,
        $.lambda,
        $.atomic_function,

        $.list_expression,
        $.range_expression,
        $.record_expression,
        $.permutation_expression,

        $.parenthesized_expression,
      ),

    // GAP source file location: src/read.c ReadQualifiedExpr
    _variable: ($) =>
      prec(
        -1,
        choice(
          $.identifier,
          $.list_selector,
          $.sublist_selector,
          $.positional_selector,
          $.record_selector,
          $.component_selector,
          $.call,
        ),
      ),

    // GAP source file location: src/read.c ReadSelector
    binary_expression: ($) =>
      choice(
        ...[
          [prec.left, 'or', PREC.OR],
          [prec.left, 'and', PREC.AND],
          [prec.left, '=', PREC.COMPARE],
          [prec.left, '<>', PREC.COMPARE],
          [prec.left, '<', PREC.COMPARE],
          [prec.left, '>', PREC.COMPARE],
          [prec.left, '<=', PREC.COMPARE],
          [prec.left, '>=', PREC.COMPARE],
          [prec.left, 'in', PREC.COMPARE],
          [prec.left, '+', PREC.PLUS],
          [prec.left, '-', PREC.PLUS],
          [prec.left, '*', PREC.MULTI],
          [prec.left, '/', PREC.MULTI],
          [prec.left, 'mod', PREC.MULTI],
          [prec.right, '^', PREC.POWER], // TODO: (fingolfin) actually, ^ is *NOT* associative in GAP at all,
          //  so an expression like `2^2^2` is a syntax error. Not sure how / whether to express that
        ].map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        prec.left(
          PREC.UNARY,
          seq(
            field('operator', choice('+', '-')),
            field('expression', $._expression),
          ),
        ),
        prec.left(
          PREC.NOT,
          seq(field('operator', 'not'), field('expression', $._expression)),
        ),
      ),

    // GAP source file location: src/scanner.c GetNumber
    integer: (_) =>
      lineContinuation(
        LITERAL_REGEXP.INTEGER,
        LITERAL_REGEXP.LINE_CONTINUATION,
      ),

    // GAP source file location: src/scanner.c GetNumber
    float: ($) =>
      choice(
        lineContinuation(
          LITERAL_REGEXP.NON_TRAILING_PERIOD_FLOAT,
          LITERAL_REGEXP.LINE_CONTINUATION,
        ),
        $._trailing_period_float,
        lineContinuation(
          LITERAL_REGEXP.EXPONENT_OR_CONVERSION_FLOAT_LEADING_DIGIT,
          LITERAL_REGEXP.LINE_CONTINUATION,
        ),
        lineContinuation(
          LITERAL_REGEXP.EXPONENT_OR_CONVERSION_FLOAT_LEADING_DOT,
          LITERAL_REGEXP.LINE_CONTINUATION,
        ),
      ),

    // GAP source file location: src/bool.c
    bool: (_) => choice('true', 'false', 'fail'),

    char: ($) =>
      seq(
        '\'',
        choice(token.immediate(prec(1, /[^\\\r\n]/)), $.escape_sequence),
        '\'',
      ),

    string: ($) => seq($.string_start, repeat($.string_content), $.string_end),

    string_content: ($) =>
      prec.right(repeat1(choice($.escape_sequence, $._string_content))),

    // GAP source file location: src/scanner.c GetEscapedChar
    escape_sequence: (_) =>
      lineContinuation(
        LITERAL_REGEXP.ESCAPE_SEQUENCE,
        LITERAL_REGEXP.LINE_CONTINUATION,
      ),

    // TODO: (fingolfin) restrict where tilde can be used, i.e., only "inside" a list or
    // record expression (but at arbitrary depth)
    function: ($) =>
      seq(
        'function',
        field('parameters', $.parameters),
        optional(seq(field('locals', $.locals), ';')),
        optional(field('body', $._block)),
        'end',
      ),

    lambda: ($) =>
      prec.right(
        PREC.LAMBDA,
        seq(
          field('parameters', $.lambda_parameters),
          '->',
          field('body', $._expression),
        ),
      ),

    parameters: ($) => makeParameters('(', ')', $.identifier, $.ellipsis),

    lambda_parameters: ($) =>
      choice($.identifier, makeParameters('{', '}', $.identifier, $.ellipsis)),

    ellipsis: (_) => '...',

    locals: ($) => seq('local', commaSep1($.identifier)),

    call: ($) =>
      prec(
        PREC.CALL,
        seq(
          field(
            'function',
            choice(
              $._variable,
              $.parenthesized_expression,
              // Yes, you can define a function and immediately call it
              $.function,
              // But not an atomic function, for some reason!?
              // $.atomic_function
            ),
          ),
          field('arguments', $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq(
        '(',
        commaSep(field('argument', $._expression)),
        optional(
          seq(':', commaSep(field('call_option', $.function_call_option))),
        ),
        ')',
      ),

    // GAP source file location: src/read.c ReadFuncCallOption
    // TODO: (reiniscirpons) Maybe remove function_call_option node to decrease
    // height and use the field selector in queries instead?
    list_expression: ($) => seq('[', commaSep(optional($._expression)), ']'),

    range_expression: ($) => {
      const valid_index_expressions = choice(
        $._variable,
        $.binary_expression,
        $.unary_expression,

        $.integer,

        $.permutation_expression,

        $.parenthesized_expression,
      );

      return seq(
        '[',
        field('first', valid_index_expressions),
        optional(seq(',', field('second', valid_index_expressions))),
        '..',
        field('last', valid_index_expressions),
        ']',
      );
    },

    // GAP source file location: src/read.c ReadRec
    record_expression: ($) =>
      seq('rec', '(', commaSep($.record_entry), optional(','), ')'),

    permutation_expression: ($) =>
      choice(
        seq('(', ')'),
        prec.right(repeat1($.permutation_cycle_expression)),
      ),

    // Does not include trivial cycle because GAP doesn't allow it in a permutation expression,
    // i.e. (1,2)() and ()(1,2) throw a syntax error.
    identifier: (_) =>
      lineContinuation(
        LITERAL_REGEXP.IDENTIFIER,
        LITERAL_REGEXP.LINE_CONTINUATION,
      ),

    comment: (_) => token(seq('#', /.*/)),

    // GAP source file location: src/io.c GetNextChar
